fixed bug for welcome section on very large screens, now all aligned to the left

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,10 @@ footer p {
     }
     
     #welcome-section{
-    flex: 50%;
+        display: flex;
+        flex-direction: column;
+        flex: 50%;
+        align-items: flex-start;    
     }
     
     #carousel-section{
